...
              const SizedBox(height: 30),

              _buildTextFormField(
                controller: _nameController,
                focusNode: _nameFocus,
                nextFocus: _dniFocus,
                label: "Nombres y Apellidos Completos",
                icon: Icons.person_outline,
                inputFormatters: [
                  FilteringTextInputFormatter.deny(RegExp(r'[0-9]')),
                ],
                validator: Validators.validateFullName,
              ),
              const SizedBox(height: 15),

              _buildTextFormField(
                controller: _dniController,
                focusNode: _dniFocus,
                nextFocus: _emailFocus,
                label: "Cédula / Documento de Identidad",
                icon: Icons.badge_outlined,
                keyboardType: TextInputType.number,
                inputFormatters: [
                  FilteringTextInputFormatter.digitsOnly,
                  LengthLimitingTextInputFormatter(_dniPrefix == 'P' ? 10 : (_dniPrefix == 'J' ? 9 : 8)),
                ],
...
              const SizedBox(height: 12),

              _buildTextFormField(
                controller: _passController,
                focusNode: _passFocus,
                nextFocus: _confirmPassFocus,
                label: "Contraseña",
                icon: Icons.lock_outline,
                isObscure: _isPassObscured,
                onToggleVisibility: () => setState(() => _isPassObscured = !_isPassObscured),
                validator: Validators.validatePassword,
              ),
              const SizedBox(height: 15),

              _buildTextFormField(
                controller: _confirmPassController,
                focusNode: _confirmPassFocus,
                label: "Confirmar Contraseña",
                icon: Icons.lock_reset,
                isObscure: _isConfirmPassObscured,
                onToggleVisibility: () => setState(() => _isConfirmPassObscured = !_isConfirmPassObscured),
                textInputAction: TextInputAction.done,
                validator: (val) {
                  if (val == null || val.isEmpty) return "Confirma tu contraseña";
...
