...
                          onPressed: () {
                            Navigator.pushReplacement(
                              context,
                              MaterialPageRoute(builder: (_) => const LoginScreen()),
                            );
                          },
                          child: const Text("Saltar", style: TextStyle(color: AppColors.textSecondary)),
                        )
                            : null, // Si es la última página, deja el espacio vacío
                      ),
                    ],
                  ),
                ),
...
