...
                TextButton(
                  onPressed: () => Navigator.push(context, MaterialPageRoute(builder: (_) => const RegisterScreen())),
                  child: RichText(
                    text: const TextSpan(
                        text: "¿No tienes cuenta? ",
                        style: TextStyle(color: AppColors.textSecondary, fontSize: 12),
                        children: [TextSpan(text: "Regístrate aquí", style: TextStyle(color: AppColors.primary, fontWeight: FontWeight.bold, fontSize: 12))]
                    ),
                  ),
                ),
                const SizedBox(height: 6),
                Center(
                  child: InkWell(
...
